# chomp

./: .gitignore  Cargo.toml  Dockerfile  README.md  dashboard.html  login.html
.github/workflows/: backup.yml  ci.yml
src/: client.rs  db.rs  food.rs  lib.rs  logging.rs  main.rs  mcp.rs  sse.rs
tests/: integration.rs
