[package]
name = "chomp"
version = "0.1.0"
edition = "2021"
description = "Local food database CLI for AI-assisted nutrition tracking"
license = "MIT"
repository = "https://github.com/meimakes/chomp"
keywords = ["nutrition", "food", "cli", "tracking", "ai"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
fuzzy-matcher = "0.3"
dirs = "5"
anyhow = "1"
tabled = "0.15"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-std", "io-util", "macros", "sync"] }
axum = { version = "0.7", optional = true }
tokio-stream = { version = "0.1", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }

csv = "1"
reqwest = { version = "0.12", features = ["blocking"] }
zip = "2"
tempfile = "3"

[features]
default = ["sse"]
sse = ["axum", "tokio-stream", "uuid", "tower-http"]
